# z_war

./: .gitignore  CMakeLists.txt  README.md  app.yaml  vcpkg.json
project-documents/: a-faire.txt  fonctionnalités.txt
project-documents/chars-test/char1/config/: config.yaml
project-documents/chars-test/char1/config/forms/base-form/: config.yaml
project-documents/chars-test/char1/config/forms/base-form/actions/: crouch.yaml  go-left.yaml  go-right.yaml  jump-to-right.yaml  roulade-left.yaml  roulade-right.yaml
project-documents/design/: Z war.penpot
resources/characters/cell/config/: config.yaml
resources/characters/cell/forms/cell/: config.yaml
resources/characters/cell/forms/cell/actions/: default.yaml
resources/characters/char1/: config.yaml
resources/characters/char1/config/: config.yaml
resources/characters/char1/config/forms/base-form/: config.yaml
resources/characters/char1/config/forms/base-form/actions/: crouch.yaml  go-left.yaml  go-right.yaml  jump-to-left.yaml  jump-to-right.yaml  roulade-left.yaml  roulade-right.yaml  static-jump.yaml
resources/characters/char2/: config.yaml
resources/characters/char3/: config.yaml
resources/config/functions/: config.yaml
resources/config/player/: config.yaml
resources/config/scenes/background/: grid-background.yaml
src/: main.cpp
src/game/core/: Game.cpp  Game.h  Game.hpp
src/game/functions/functions/: GameFunction.cpp  GameFunction.hpp
src/game/functions/game-functions/: SimpleFunctions.cpp  SimpleFunctions.hpp
src/game/pattern/observer/: ClassicObservable.cpp  ClassicObservable.hpp  ClassicObserver.cpp  ClassicObserver.hpp
src/game/player/character/: Character.cpp  Character.hpp
src/game/player/character/character/: Character.cpp  Character.hpp  CharacterActionDescription.hpp  CharacterDescription.hpp
src/game/player/character/game-characters/: FileCharacter.cpp  FileCharacter.hpp
src/game/player/player/: Player.cpp  Player.hpp
src/game/resources/: ResourcesLoader.cpp  ResourcesLoader.hpp  ResourcesManager.cpp  ResourcesManager.hpp
src/game/scene/background/background/: SceneBackground.cpp  SceneBackground.hpp
src/game/scene/background/game-background/: GridBackground.cpp  GridBackground.hpp
src/game/scene/components/animation/: Animation.cpp  Animation.hpp  CharacterSwitcherAnimation.cpp  CharacterSwitcherAnimation.hpp
src/game/scene/game-scene/: LoadingScene.cpp  LoadingScene.hpp
src/game/scene/scene/: BaseScene.cpp  BaseScene.hpp
src/game/utils/: FileUtils.cpp  FileUtils.hpp  TextUtils.cpp  TextUtils.hpp
src/game/utils/pattern/observer/: ClassicObservable.cpp  ClassicObservable.hpp  ClassicObserver.cpp  ClassicObserver.hpp
